[package]
name = "parquet_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arrow = "51"
parquet = "51"
rand = "0.8"

[[bin]]
name = "write"
path = "src/bin/write.rs"

[[bin]]
name = "read"
path = "src/bin/read.rs"