[package]
name = "parquet_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arrow = { version = "51" }
parquet = { version = "51", features = ["async", "object_store"] }
rand = "0.8"
tokio = { version = "1.37", features = ["full"] }
object_store = { version = "0.9.1", features = ["aws"] }
futures = { version = "0.3", features = ["std"] }

[[bin]]
name = "write"
path = "src/bin/write.rs"

[[bin]]
name = "read"
path = "src/bin/read.rs"